@@ -1,3 +1,9 @@
+2013-12-31  TANAKA Takuji <KXD02663@nifty.ne.jp>
+
+	* knj.c, knj.h: Add new functions fsyscp_fopen() and
+	get_command_line_args_utf8() (Windows only)
+	* progname.c: Refine initialization for KANJI (Windows only)
+
 2013-12-03  TANAKA Takuji <KXD02663@nifty.ne.jp>
 
 	* elt-dirs.c, knj.c, knj.h, progname.c, readable.c: Support KANJI
